add_executable(timestamp_unittest Timestamp_unittest.cpp)
target_link_libraries(timestamp_unittest myserver_base)
#add_test(NAME timestamp_unittest COMMAND timestamp_unittest)

add_executable(Atomic_unittest Atomic_unittest.cpp)
target_link_libraries(Atomic_unittest myserver_base)

add_executable(Exception_test Exception_test.cpp)
target_link_libraries(Exception_test myserver_base)

add_executable(Thread_test Thread_test.cpp)
target_link_libraries(Thread_test myserver_base)

add_executable(BlockingQueue_test BlockingQueue_test.cpp)
target_link_libraries(BlockingQueue_test myserver_base)

add_executable(BoundedBlockingQueue_test BoundedBlockingQueue_test.cpp)
target_link_libraries(BoundedBlockingQueue_test myserver_base)

add_executable(ThreadPool_test ThreadPool_test.cpp)
target_link_libraries(ThreadPool_test myserver_base)

add_executable(Singleton_test Singleton_test.cpp)
target_link_libraries(Singleton_test myserver_base)

add_executable(ThreadLocal_test ThreadLocal_test.cpp)
target_link_libraries(ThreadLocal_test myserver_base)

add_executable(ThreadLocalSingleton_test ThreadLocalSingleton_test.cpp)
target_link_libraries(ThreadLocalSingleton_test myserver_base)

add_executable(SingletonThreadLocal_test SingletonThreadLocal_test.cpp)
target_link_libraries(SingletonThreadLocal_test myserver_base)

add_executable(Logging_test Logging_test.cpp)
target_link_libraries(Logging_test myserver_base)

if(BOOSTTEST_LIBRARY)
add_executable(LogStream_test LogStream_test.cpp)
target_link_libraries(LogStream_test myserver_base boost_unit_test_framework)
endif()

add_executable(LogStream_bench LogStream_bench.cpp)
target_link_libraries(LogStream_bench myserver_base)